--- a/cooperhewitt/src/main/AndroidManifest.xml
+++ b/cooperhewitt/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2017 The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,24 +15,25 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.droidteahouse.cooperhewitt">
-  <uses-permission android:name="android.permission.INTERNET"/>
-  <application
-      android:allowBackup="true"
-      android:name="com.droidteahouse.cooperhewitt.ArtApplication"
-      android:icon="@mipmap/ic_launcher"
-      android:label="@string/app_name"
-      android:roundIcon="@mipmap/ic_launcher_round"
-      android:supportsRtl="true"
-      android:theme="@style/AppTheme">
-    <activity android:name="com.droidteahouse.cooperhewitt.ui.ArtActivity">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
+    package="com.droidteahouse.cooperhewitt">
 
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
-    </activity>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <application
+        android:name="com.droidteahouse.cooperhewitt.ArtApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity android:name="com.droidteahouse.cooperhewitt.ui.ArtActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-  </application>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+    </application>
 
 </manifest>
